erpnext/mariadb.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  namespace: erpnext
  name: mariadb
spec:
  serviceName: mariadb-service
  replicas: 1
  selector:
    matchLabels:
      app: mariadb
  template:
    metadata:
      labels:
        app: mariadb
    spec:
      containers:
      - name: mariadb
        image: mariadb:10.6.1
        args:
          - "--default-authentication-plugin=mysql_native_password"
        resources:
          limits:
            memory: "768Mi"
            cpu: "250m"
        ports:
        - containerPort: 3306
        volumeMounts:
          - mountPath: /var/lib/mysql
            name: vol
            subPath: data
      volumes:
        - name: vol
          persistentVolumeClaim:
            claimName: mariadb-claim
---
apiVersion: v1
kind: Service
metadata:
  namespace: erpnext
  name: mariadb-service
spec:
  selector:
    app: mariadb
  ports:
  - port: 3306
    targetPort: 3306
