erpnext/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress
  namespace: erpnext
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: adminer-erpnext.flou21.de
    http:
      paths:
      - path: /
        backend:
          serviceName: adminer-service
          servicePort: 8080
